# LibPEparse

./: .gitignore  CMakeLists.txt  code1.c  code2.c  coff1.c  coff2.c  coff3.c  config.mk  general.mk  linux.mk  main.c  windows.mk
example/: code1.c  code2.c  coff1.c  coff2.c  coff2linked.c  coff3.c  elf1.c  elf2.c  elf3.c  elf4.c  main.c
include/: CreateELF.h  CreatePe.h  LibCOFFparse.h  LibELFparse.h  LibPEparse.h  UtilsC.h
include/RelocsELF/: AArch64.h  AMDGPU.h  ARC.h  ARM.h  AVR.h  BPF.h  CSKY.h  Hexagon.h  Lanai.h  LoongArch.h  M68k.h  MSP430.h  Mips.h  PowerPC.h  PowerPc64.h  RISCV.h  RelocsELF.h  Sparc.h  SystemZ.h  VE.h  Xtensa.h  i386.h  x86_64.h
src/: CreateELF.c  CreatePe.c  LibCOFFparse.c  LibELFparse.c  LibPEparse.c  UtilsC.c
